Auth_Lang_Fixed

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -7,6 +7,39 @@
   "language": "Language",
   "choose_language": "Choose your language",
   "cancel": "Cancel",
+  "tagline": "Your Voice, Your Story",
+  "select_role": "Select your role:",
+  "artist": "Artist",
+  "admirer": "Admirer",
+  "record_bio_prompt": "Record a short voice intro for your bio",
+  "generated_bio": "Generated Bio:",
+  "location": "Location",
+  "finish_registration": "Finish Registration",
+  "create_account_title": "Create your Account",
+  "welcome_back": "Welcome Back",
+  "full_name": "Full Name",
+  "email": "Email",
+  "password": "Password",
+  "next_record_bio": "Next: Record Voice Bio",
+  "create_account_button": "Create Account",
+  "sign_in": "Sign In",
+  "already_have_account": "Already have an account?",
+  "dont_have_account": "Don't have an account?",
+  "register": "Register",
+  "terms_and_privacy_disclaimer": "By continuing, you agree to our Terms of Service and Privacy Policy.",
+  "recaptcha_notice": "This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of Service apply.",
+  "fill_all_fields": "Please fill in all fields.",
+  "fill_fields_and_record_bio": "Please fill in all fields and record your bio.",
+  "error_title": "Error",
+  "ok": "OK",
+  "err_user_not_found": "No user found with this email address.",
+  "err_wrong_password": "Wrong password provided.",
+  "err_email_in_use": "An account already exists with this email address.",
+  "err_weak_password": "The password is too weak.",
+  "err_invalid_email": "The email address is not valid.",
+  "err_too_many_requests": "Too many requests. Please try again later.",
+  "err_operation_not_allowed": "This sign-in method is not enabled.",
+  "err_generic": "An error occurred. Please try again.",
   "home": "Home",
   "explore": "Explore",
   "search": "Search",
