--- a/assets/lang/hi.json
+++ b/assets/lang/hi.json
@@ -7,6 +7,39 @@
   "language": "भाषा",
   "choose_language": "अपनी भाषा चुनें",
   "cancel": "रद्द करें",
+  "tagline": "आपकी आवाज़, आपकी कहानी",
+  "select_role": "अपनी भूमिका चुनें:",
+  "artist": "कलाकार",
+  "admirer": "प्रशंसक",
+  "record_bio_prompt": "अपने बायो के लिए एक छोटा वॉइस इंट्रो रिकॉर्ड करें",
+  "generated_bio": "जनरेटेड बायो:",
+  "location": "स्थान",
+  "finish_registration": "रजिस्ट्रेशन पूरा करें",
+  "create_account_title": "अपना अकाउंट बनाएं",
+  "welcome_back": "वापसी पर स्वागत है",
+  "full_name": "पूरा नाम",
+  "email": "ईमेल",
+  "password": "पासवर्ड",
+  "next_record_bio": "अगला: वॉइस बायो रिकॉर्ड करें",
+  "create_account_button": "अकाउंट बनाएं",
+  "sign_in": "साइन इन",
+  "already_have_account": "क्या आपका पहले से अकाउंट है?",
+  "dont_have_account": "क्या आपका अकाउंट नहीं है?",
+  "register": "रजिस्टर",
+  "terms_and_privacy_disclaimer": "आगे बढ़ते हुए, आप हमारी सेवा की शर्तों और गोपनीयता नीति से सहमत हैं।",
+  "recaptcha_notice": "यह साइट reCAPTCHA द्वारा सुरक्षित है और Google की गोपनीयता नीति और सेवा की शर्तें लागू होती हैं।",
+  "fill_all_fields": "कृपया सभी फ़ील्ड भरें।",
+  "fill_fields_and_record_bio": "कृपया सभी फ़ील्ड भरें और अपना बायो रिकॉर्ड करें।",
+  "error_title": "त्रुटि",
+  "ok": "ठीक है",
+  "err_user_not_found": "इस ईमेल पते के साथ कोई उपयोगकर्ता नहीं मिला।",
+  "err_wrong_password": "गलत पासवर्ड दिया गया।",
+  "err_email_in_use": "इस ईमेल पते के साथ पहले से एक अकाउंट मौजूद है।",
+  "err_weak_password": "पासवर्ड बहुत कमजोर है।",
+  "err_invalid_email": "ईमेल पता मान्य नहीं है।",
+  "err_too_many_requests": "बहुत अधिक अनुरोध। कृपया बाद में पुनः प्रयास करें।",
+  "err_operation_not_allowed": "यह साइन-इन विधि सक्षम नहीं है।",
+  "err_generic": "एक त्रुटि हुई। कृपया पुनः प्रयास करें।",
   "home": "होम",
   "explore": "एक्सप्लोर",
   "search": "खोजें",
