--- a/assets/lang/kn.json
+++ b/assets/lang/kn.json
@@ -7,6 +7,39 @@
   "language": "ಭಾಷೆ",
   "choose_language": "ನಿಮ್ಮ ಭಾಷೆಯನ್ನು ಆರಿಸಿ",
   "cancel": "ರದ್ದುಮಾಡಿ",
+  "tagline": "ನಿಮ್ಮ ಧ್ವನಿ, ನಿಮ್ಮ ಕಥೆ",
+  "select_role": "ನಿಮ್ಮ ಪಾತ್ರವನ್ನು ಆಯ್ಕೆಮಾಡಿ:",
+  "artist": "ಕಲಾವಿದ",
+  "admirer": "ಆರಾಧಕ",
+  "record_bio_prompt": "ನಿಮ್ಮ ಬಯೋಗಾಗಿ ಚಿಕ್ಕ ವಾಯ್ಸ್ ಇಂಟ್ರೊವನ್ನು ದಾಖಲಿಸಿ",
+  "generated_bio": "ತಯಾರಾದ ಬಯೋ:",
+  "location": "ಸ್ಥಳ",
+  "finish_registration": "ನೋಂದಣಿ ಪೂರ್ಣಗೊಳಿಸಿ",
+  "create_account_title": "ನಿಮ್ಮ ಖಾತೆಯನ್ನು ರಚಿಸಿ",
+  "welcome_back": "ಮತ್ತೆ ಸ್ವಾಗತ",
+  "full_name": "ಪೂರ್ಣ ಹೆಸರು",
+  "email": "ಇಮೇಲ್",
+  "password": "ಪಾಸ್ವರ್ಡ್",
+  "next_record_bio": "ಮುಂದೆ: ವಾಯ್ಸ್ ಬಯೋ ದಾಖಲಿಸಿ",
+  "create_account_button": "ಖಾತೆ ರಚಿಸಿ",
+  "sign_in": "ಸೈನ್ ಇನ್",
+  "already_have_account": "ಈಗಾಗಲೇ ಖಾತೆ ಇದೆಯೆ?",
+  "dont_have_account": "ಖಾತೆ ಇಲ್ಲವೇ?",
+  "register": "ರಿಜಿಸ್ಟರ್",
+  "terms_and_privacy_disclaimer": "ಮುಂದುವರಿಸಿದರೆ, ನೀವು ನಮ್ಮ ಸೇವಾ ನಿಯಮಗಳು ಮತ್ತು ಗೌಪ್ಯತಾ ನೀತಿಗೆ ಒಪ್ಪುತ್ತೀರಿ.",
+  "recaptcha_notice": "ಈ ತಾಣವನ್ನು reCAPTCHA ರಕ್ಷಿಸಿದೆ ಮತ್ತು Google ಗೌಪ್ಯತಾ ನೀತಿ ಮತ್ತು ಸೇವಾ ನಿಯಮಗಳು ಅನ್ವಯಿಸುತ್ತವೆ.",
+  "fill_all_fields": "ದಯವಿಟ್ಟು ಎಲ್ಲಾ ಕ್ಷೇತ್ರಗಳನ್ನು ಭರ್ತಿ ಮಾಡಿ.",
+  "fill_fields_and_record_bio": "ದಯವಿಟ್ಟು ಎಲ್ಲಾ ಕ್ಷೇತ್ರಗಳನ್ನು ಭರ್ತಿ ಮಾಡಿ ಮತ್ತು ನಿಮ್ಮ ಬಯೋವನ್ನು ದಾಖಲಿಸಿ.",
+  "error_title": "ದೋಷ",
+  "ok": "ಸರಿ",
+  "err_user_not_found": "ಈ ಇಮೇಲ್ ವಿಳಾಸದೊಂದಿಗೆ ಯಾವುದೇ ಬಳಕೆದಾರರನ್ನು ಕಂಡುಹಿಡಿಯಲಾಗಿಲ್ಲ.",
+  "err_wrong_password": "ತಪ್ಪಾದ ಪಾಸ್ವರ್ಡ್ ನೀಡಲಾಗಿದೆ.",
+  "err_email_in_use": "ಈ ಇಮೇಲ್ ವಿಳಾಸದೊಂದಿಗೆ ಈಗಾಗಲೇ ಖಾತೆ ಇದೆ.",
+  "err_weak_password": "ಪಾಸ್ವರ್ಡ್ ತುಂಬಾ ದುರ್ಬಲವಾಗಿದೆ.",
+  "err_invalid_email": "ಇಮೇಲ್ ವಿಳಾಸ ಸರಿಯಿಲ್ಲ.",
+  "err_too_many_requests": "ಬಹಳಷ್ಟು ವಿನಂತಿಗಳು. ದಯವಿಟ್ಟು ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+  "err_operation_not_allowed": "ಈ ಸೈನ್-ಇನ್ ವಿಧಾನ ಸಕ್ರಿಯಗೊಳಿಸಲ್ಪಟ್ಟಿಲ್ಲ.",
+  "err_generic": "ದೋಷ ಸಂಭವಿಸಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
   "home": "ಮುಖಪುಟ",
   "explore": "ಅನ್ವೇಷಣೆ",
   "search": "ಶೋಧನೆ",
