--- a/assets/lang/kn.json
+++ b/assets/lang/kn.json
@@ -63,5 +63,9 @@
   "weekly_leaderboard": "ಸಾಪ್ತಾಹಿಕ ಲೀಡರ್ಬೋರ್ಡ್",
   "badge_trending_creator": "ಟ್ರೆಂಡಿಂಗ್ ಕ್ರಿಯೇಟರ್",
   "badge_storyteller": "ಕಥೆಗಾರ",
-  "badge_community_choice": "ಗಣಬೆನು ಆಯ್ಕೆ"
+  "badge_community_choice": "ಗಣಬೆನು ಆಯ್ಕೆ",
+  "bio": "ಬಯೋ",
+  "listen_intro": "ಪರಿಚಯವನ್ನು ಕೇಳಿ",
+  "error": "ದೋಷ",
+  "no_posts_yet": "ಇನ್ನೂ ಯಾವುದೇ ಪೋಸ್ಟ್ ಇಲ್ಲ."
 }
