--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -58,8 +58,8 @@
   "microphone_permission_required": "Microphone permission is required.",
   "browse_by_category": "Browse by Category"
   ,
-  "exhibition_title": "The Sunday Exhibition",
-  "exhibition_subtitle": "Celebrating the most inspiring creators of the week.",
+  "exhibition_title": "Exhibition",
+  "exhibition_subtitle": "A curated reel of today’s top voices.",
   "weekly_leaderboard": "Weekly Leaderboard",
   "badge_trending_creator": "Trending Creator",
   "badge_storyteller": "Storyteller",
