--- a/assets/lang/kn.json
+++ b/assets/lang/kn.json
@@ -19,6 +19,8 @@
   "welcome_back": "ಮತ್ತೆ ಸ್ವಾಗತ",
   "full_name": "ಪೂರ್ಣ ಹೆಸರು",
   "email": "ಇಮೇಲ್",
+  "phone": "ಫೋನ್",
+  "email_or_phone": "ಇಮೇಲ್ ಅಥವಾ ಫೋನ್",
   "password": "ಪಾಸ್ವರ್ಡ್",
   "next_record_bio": "ಮುಂದೆ: ವಾಯ್ಸ್ ಬಯೋ ದಾಖಲಿಸಿ",
   "create_account_button": "ಖಾತೆ ರಚಿಸಿ",
