"Visit profile and settings"

--- a/assets/lang/hi.json
+++ b/assets/lang/hi.json
@@ -76,5 +76,6 @@
   "search_results": "खोज परिणाम",
   "no_results_found": "कोई परिणाम नहीं मिला",
   "recent_posts": "हाल की पोस्ट",
-  "posts": "पोस्ट"
+  "posts": "पोस्ट",
+  "unknown": "पता नहीं"
 }
