--- a/assets/lang/kn.json
+++ b/assets/lang/kn.json
@@ -75,5 +75,6 @@
   "search_results": "ಹುಡುಕಾಟ ಫಲಿತಾಂಶಗಳು",
   "no_results_found": "ಯಾವುದೇ ಫಲಿತಾಂಶಗಳು ಸಿಗಲಿಲ್ಲ",
   "recent_posts": "ಇತ್ತೀಚಿನ ಪೋಸ್ಟ್‌ಗಳು",
-  "posts": "ಪೋಸ್ಟ್‌ಗಳು"
+  "posts": "ಪೋಸ್ಟ್‌ಗಳು",
+  "unknown": "ಗೊತ್ತಿಲ್ಲ"
 }
