--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -77,4 +77,51 @@
   "no_results_found": "No results found",
   "recent_posts": "Recent Posts",
   "posts": "Posts"
+  ,
+  "preferences": "Preferences",
+  "profile_section": "Profile",
+  "settings_update_profile_info": "Update your profile information",
+  "settings_change_password_title": "Change Password",
+  "settings_change_password_subtitle": "Update your account password",
+  "dark_mode_enabled": "Dark theme enabled",
+  "light_mode_enabled": "Light theme enabled",
+  "account": "Account",
+  "logout": "Logout",
+  "logout_subtitle": "Sign out of your account",
+  "logout_confirm_message": "Are you sure you want to logout?",
+  "legal": "Legal",
+  "privacy_policy": "Privacy Policy",
+  "privacy_policy_subtitle": "How we handle your data",
+  "terms_conditions": "Terms & Conditions",
+  "terms_subtitle": "Terms of service",
+  "app_info": "App Info",
+  "about_vocalcanvas": "About VocalCanvas",
+  "version": "Version 1.0.0",
+  "close": "Close",
+  "current_password": "Current Password",
+  "new_password": "New Password",
+  "confirm_new_password": "Confirm New Password",
+  "passwords_do_not_match": "Passwords do not match",
+  "password_update_success": "Password updated successfully",
+  "password_update_fail": "Failed to update password",
+  "update": "Update",
+  "error_signing_out": "Error signing out"
+  ,
+  "basic_info_tab": "Basic Info",
+  "contact_bio_tab": "Contact & Bio",
+  "save": "Save",
+  "names_multilingual": "Names (Multilingual)",
+  "name_en_label": "Name (English)",
+  "name_hi_label": "Name (Hindi) - Optional",
+  "name_kn_label": "Name (Kannada) - Optional",
+  "locations_multilingual": "Locations (Multilingual)",
+  "location_en_label": "Location (English)",
+  "location_hi_label": "Location (Hindi) - Optional",
+  "location_kn_label": "Location (Kannada) - Optional",
+  "contact_information": "Contact Information",
+  "phone_optional_label": "Phone Number - Optional",
+  "bio_multilingual": "Bio (Multilingual)",
+  "bio_en_label": "Bio (English)",
+  "bio_hi_label": "Bio (Hindi) - Optional",
+  "bio_kn_label": "Bio (Kannada) - Optional"
 }
