--- a/assets/lang/hi.json
+++ b/assets/lang/hi.json
@@ -78,4 +78,51 @@
   "recent_posts": "हाल की पोस्ट",
   "posts": "पोस्ट",
   "unknown": "पता नहीं"
+  ,
+  "preferences": "प्राथमिकताएँ",
+  "profile_section": "प्रोफाइल",
+  "settings_update_profile_info": "अपनी प्रोफाइल जानकारी अपडेट करें",
+  "settings_change_password_title": "पासवर्ड बदलें",
+  "settings_change_password_subtitle": "अपने अकाउंट का पासवर्ड अपडेट करें",
+  "dark_mode_enabled": "डार्क थीम सक्षम",
+  "light_mode_enabled": "लाइट थीम सक्षम",
+  "account": "अकाउंट",
+  "logout": "लॉगआउट",
+  "logout_subtitle": "अपने अकाउंट से साइन आउट करें",
+  "logout_confirm_message": "क्या आप वाकई लॉगआउट करना चाहते हैं?",
+  "legal": "कानूनी",
+  "privacy_policy": "गोपनीयता नीति",
+  "privacy_policy_subtitle": "हम आपके डेटा को कैसे संभालते हैं",
+  "terms_conditions": "नियम और शर्तें",
+  "terms_subtitle": "सेवा की शर्तें",
+  "app_info": "एप जानकारी",
+  "about_vocalcanvas": "वोकलकैनवस के बारे में",
+  "version": "संस्करण 1.0.0",
+  "close": "बंद करें",
+  "current_password": "वर्तमान पासवर्ड",
+  "new_password": "नया पासवर्ड",
+  "confirm_new_password": "नए पासवर्ड की पुष्टि करें",
+  "passwords_do_not_match": "पासवर्ड मेल नहीं खाते",
+  "password_update_success": "पासवर्ड सफलतापूर्वक अपडेट हुआ",
+  "password_update_fail": "पासवर्ड अपडेट करने में विफल",
+  "update": "अपडेट",
+  "error_signing_out": "साइन आउट करते समय त्रुटि"
+  ,
+  "basic_info_tab": "मूल जानकारी",
+  "contact_bio_tab": "संपर्क और बायो",
+  "save": "सेव",
+  "names_multilingual": "नाम (बहुभाषी)",
+  "name_en_label": "नाम (अंग्रेज़ी)",
+  "name_hi_label": "नाम (हिंदी) - वैकल्पिक",
+  "name_kn_label": "नाम (कन्नड़) - वैकल्पिक",
+  "locations_multilingual": "स्थान (बहुभाषी)",
+  "location_en_label": "स्थान (अंग्रेज़ी)",
+  "location_hi_label": "स्थान (हिंदी) - वैकल्पिक",
+  "location_kn_label": "स्थान (कन्नड़) - वैकल्पिक",
+  "contact_information": "संपर्क जानकारी",
+  "phone_optional_label": "फोन नंबर - वैकल्पिक",
+  "bio_multilingual": "बायो (बहुभाषी)",
+  "bio_en_label": "बायो (अंग्रेज़ी)",
+  "bio_hi_label": "बायो (हिंदी) - वैकल्पिक",
+  "bio_kn_label": "बायो (कन्नड़) - वैकल्पिक"
 }
