--- a/assets/lang/kn.json
+++ b/assets/lang/kn.json
@@ -77,4 +77,51 @@
   "recent_posts": "ಇತ್ತೀಚಿನ ಪೋಸ್ಟ್‌ಗಳು",
   "posts": "ಪೋಸ್ಟ್‌ಗಳು",
   "unknown": "ಗೊತ್ತಿಲ್ಲ"
+  ,
+  "preferences": "ಆಯ್ಕೆಗಳು",
+  "profile_section": "ಪ್ರೊಫೈಲ್",
+  "settings_update_profile_info": "ನಿಮ್ಮ ಪ್ರೊಫೈಲ್ ಮಾಹಿತಿಯನ್ನು ಅಪ್ಡೇಟ್ ಮಾಡಿ",
+  "settings_change_password_title": "ಪಾಸ್ವರ್ಡ್ ಬದಲಾಯಿಸಿ",
+  "settings_change_password_subtitle": "ನಿಮ್ಮ ಖಾತೆಯ ಪಾಸ್ವರ್ಡ್ ಅನ್ನು ಅಪ್ಡೇಟ್ ಮಾಡಿ",
+  "dark_mode_enabled": "ಡಾರ್ಕ್ ಥೀಮ್ ಸಕ್ರಿಯವಾಗಿದೆ",
+  "light_mode_enabled": "ಲೈಟ್ ಥೀಮ್ ಸಕ್ರಿಯವಾಗಿದೆ",
+  "account": "ಖಾತೆ",
+  "logout": "ಲಾಗ್ ಔಟ್",
+  "logout_subtitle": "ನಿಮ್ಮ ಖಾತೆಯಿಂದ ಸೈನ್ ಔಟ್ ಮಾಡಿ",
+  "logout_confirm_message": "ಖಚಿತವಾಗಿಯೂ ಲಾಗ್ ಔಟ್ ಮಾಡಲು ಬಯಸುವಿರಾ?",
+  "legal": "ಕಾನೂನು",
+  "privacy_policy": "ಗೌಪ್ಯತಾ ನೀತಿ",
+  "privacy_policy_subtitle": "ನಾವು ನಿಮ್ಮ ಡೇಟಾವನ್ನು ಹೇಗೆ ನಿಭಾಯಿಸುತ್ತೇವೆ",
+  "terms_conditions": "ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳು",
+  "terms_subtitle": "ಸೇವಾ ನಿಯಮಗಳು",
+  "app_info": "ಅಪ್ಲಿಕೇಶನ್ ಮಾಹಿತಿ",
+  "about_vocalcanvas": "VocalCanvas ಬಗ್ಗೆ",
+  "version": "ಆವೃತ್ತಿ 1.0.0",
+  "close": "ಮುಚ್ಚಿ",
+  "current_password": "ಪ್ರಸ್ತುತ ಪಾಸ್ವರ್ಡ್",
+  "new_password": "ಹೊಸ ಪಾಸ್ವರ್ಡ್",
+  "confirm_new_password": "ಹೊಸ ಪಾಸ್ವರ್ಡ್ ದೃಢೀಕರಿಸಿ",
+  "passwords_do_not_match": "ಪಾಸ್ವರ್ಡ್‌ಗಳು ಹೊಂದಿಕೆಯಾಗುತ್ತಿಲ್ಲ",
+  "password_update_success": "ಪಾಸ್ವರ್ಡ್ ಯಶಸ್ವಿಯಾಗಿ ಅಪ್ಡೇಟ್ ಆಯಿತು",
+  "password_update_fail": "ಪಾಸ್ವರ್ಡ್ ಅಪ್ಡೇಟ್ ವಿಫಲವಾಗಿದೆ",
+  "update": "ಅಪ್ಡೇಟ್",
+  "error_signing_out": "ಸೈನ್ ಔಟ್ ಮಾಡುವಾಗ ದೋಷ"
+  ,
+  "basic_info_tab": "ಮೂಲ ಮಾಹಿತಿ",
+  "contact_bio_tab": "ಸಂಪರ್ಕ ಮತ್ತು ಬಯೋ",
+  "save": "ಸೇವ್",
+  "names_multilingual": "ಹೆಸರುಗಳು (ಬಹುಭಾಷೆ)",
+  "name_en_label": "ಹೆಸರು (ಇಂಗ್ಲಿಷ್)",
+  "name_hi_label": "ಹೆಸರು (ಹಿಂದಿ) - ಐಚ್ಛಿಕ",
+  "name_kn_label": "ಹೆಸರು (ಕನ್ನಡ) - ಐಚ್ಛಿಕ",
+  "locations_multilingual": "ಸ್ಥಳಗಳು (ಬಹುಭಾಷೆ)",
+  "location_en_label": "ಸ್ಥಳ (ಇಂಗ್ಲಿಷ್)",
+  "location_hi_label": "ಸ್ಥಳ (ಹಿಂದಿ) - ಐಚ್ಛಿಕ",
+  "location_kn_label": "ಸ್ಥಳ (ಕನ್ನಡ) - ಐಚ್ಛಿಕ",
+  "contact_information": "ಸಂಪರ್ಕ ಮಾಹಿತಿ",
+  "phone_optional_label": "ಫೋನ್ ಸಂಖ್ಯೆ - ಐಚ್ಛಿಕ",
+  "bio_multilingual": "ಬಯೋ (ಬಹುಭಾಷೆ)",
+  "bio_en_label": "ಬಯೋ (ಇಂಗ್ಲಿಷ್)",
+  "bio_hi_label": "ಬಯೋ (ಹಿಂದಿ) - ಐಚ್ಛಿಕ",
+  "bio_kn_label": "ಬಯೋ (ಕನ್ನಡ) - ಐಚ್ಛಿಕ"
 }
